--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,16 @@
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 cmake_minimum_required(VERSION 3.16)
 
 project(kgpt VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Quick)
+find_package(Qt6 REQUIRED COMPONENTS
+    Gui
+    Qml
+    Quick
+)
 
 qt_standard_project_setup(REQUIRES 6.8)
 
@@ -19,19 +25,17 @@ qt_add_qml_module(appkgpt
         Main.qml
 )
 
-# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
-# If you are developing for iOS or macOS you should consider setting an
-# explicit, fixed bundle identifier manually though.
 set_target_properties(appkgpt PROPERTIES
-#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appkgpt
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
     MACOSX_BUNDLE TRUE
     WIN32_EXECUTABLE TRUE
 )
 
-target_link_libraries(appkgpt
-    PRIVATE Qt6::Quick
+target_link_libraries(appkgpt PRIVATE
+    Qt6::Gui
+    Qt6::Qml
+    Qt6::Quick
 )
 
 include(GNUInstallDirs)
